# personal

./: .bazelrc  .clang-format  BUILD.bazel  MODULE.bazel
docs/: TODO.md
modules/dotfiles/: README.md  install.sh
modules/dotfiles/nvim/: init.lua  lazy-lock.json
modules/dotfiles/nvim/lua/: remap.lua
modules/dotfiles/nvim/lua/plugins/: fugitive.lua  lsp.lua  neotree.lua  plugins.lua  telescope.lua  themes.lua  treesitter.lua
modules/dotfiles/tmux/: tmux.conf
modules/replication/model/cas-paxos/: BUILD.bazel  README.md
modules/replication/model/cas-paxos/spec/: ChangeSucceeded.p  HistoryIsLinearizable.P  HistoryIsLinearizable.p
modules/replication/model/cas-paxos/src/: Client.p  Proposer.p  Types.p
modules/replication/model/cas-paxos/test/: Test.p
modules/replication/model/common/: BUILD.bazel  network.p
modules/replication/model/paxos/: BUILD.bazel.disabled
modules/replication/model/paxos/src/: Types.p
modules/replication/proto/: caspaxos.proto
modules/replication/src/client/: BUILD  client_main.cc
modules/replication/src/server/: BUILD  ballot.h  change_function.h  in_memory_store.cc  in_memory_store.h  in_process_transport.cc  in_process_transport.h  node.cc  node.h  server_main.cc  store.h  transport.h
modules/replication/test/integration/: simple.sh
modules/rules_p/: README.md
modules/rules_p/p/private/rules/: project.bzl
modules/santa/: main.py  pyproject.toml
modules/ziggy/: BUILD
modules/ziggy/frontend/: BUILD
tools/etc/: do
