load("@aspect_rules_lint//format:defs.bzl", "format_multirun")

alias(
    name = "format",
    actual = "//tools/format:format",
)

exports_files(
    [
        ".clang-format",
        ".clang-tidy",
    ],
    visibility = ["//visibility:public"],
)

load("@npm//:defs.bzl", "npm_link_all_packages")

npm_link_all_packages(name = "node_modules")
